# freelance-stock

./: .env-compose  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  script.sh
freelance/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
freelance/accounts/migrations/: 0001_initial.py
freelance/config/: settings.py  urls.py
freelance/pages/: tests.py  urls.py  views.py
freelance/static/css/: base.css
freelance/stock/: urls.py  views.py
freelance/templates/: _base.html  about.html  customer_office.html  freelance_office.html  home.html  profile.html  search_results.html
freelance/templates/registration/: login.html  signup.html
