[tool.poetry]
name = "freelance"
version = "0.1.0"
description = ""
authors = ["deriabin_85 <deriabin_85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"
psycopg2-binary = "^2.9.9"
environs = {extras = ["django"], version = "^11.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
